; ModuleID = '/home/carl/AnghaBench/linux/drivers/crypto/mediatek/extr_mtk-platform.c_mtk_crypto_remove.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/crypto/mediatek/extr_mtk-platform.c_mtk_crypto_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.platform_device = type { i32 }
%struct.mtk_cryp = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.platform_device*)* @mtk_crypto_remove to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mtk_crypto_remove(%struct.platform_device* %0) #0 {
  %2 = alloca %struct.platform_device*, align 8
  %3 = alloca %struct.mtk_cryp*, align 8
  store %struct.platform_device* %0, %struct.platform_device** %2, align 8
  %4 = load %struct.platform_device*, %struct.platform_device** %2, align 8
  %5 = call %struct.mtk_cryp* @platform_get_drvdata(%struct.platform_device* %4)
  store %struct.mtk_cryp* %5, %struct.mtk_cryp** %3, align 8
  %6 = load %struct.mtk_cryp*, %struct.mtk_cryp** %3, align 8
  %7 = call i32 @mtk_hash_alg_release(%struct.mtk_cryp* %6)
  %8 = load %struct.mtk_cryp*, %struct.mtk_cryp** %3, align 8
  %9 = call i32 @mtk_cipher_alg_release(%struct.mtk_cryp* %8)
  %10 = load %struct.mtk_cryp*, %struct.mtk_cryp** %3, align 8
  %11 = call i32 @mtk_desc_dma_free(%struct.mtk_cryp* %10)
  %12 = load %struct.mtk_cryp*, %struct.mtk_cryp** %3, align 8
  %13 = getelementptr inbounds %struct.mtk_cryp, %struct.mtk_cryp* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @clk_disable_unprepare(i32 %14)
  %16 = load %struct.mtk_cryp*, %struct.mtk_cryp** %3, align 8
  %17 = getelementptr inbounds %struct.mtk_cryp, %struct.mtk_cryp* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @pm_runtime_put_sync(i32 %18)
  %20 = load %struct.mtk_cryp*, %struct.mtk_cryp** %3, align 8
  %21 = getelementptr inbounds %struct.mtk_cryp, %struct.mtk_cryp* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = call i32 @pm_runtime_disable(i32 %22)
  %24 = load %struct.platform_device*, %struct.platform_device** %2, align 8
  %25 = call i32 @platform_set_drvdata(%struct.platform_device* %24, i32* null)
  ret i32 0
}

declare dso_local %struct.mtk_cryp* @platform_get_drvdata(%struct.platform_device*) #1

declare dso_local i32 @mtk_hash_alg_release(%struct.mtk_cryp*) #1

declare dso_local i32 @mtk_cipher_alg_release(%struct.mtk_cryp*) #1

declare dso_local i32 @mtk_desc_dma_free(%struct.mtk_cryp*) #1

declare dso_local i32 @clk_disable_unprepare(i32) #1

declare dso_local i32 @pm_runtime_put_sync(i32) #1

declare dso_local i32 @pm_runtime_disable(i32) #1

declare dso_local i32 @platform_set_drvdata(%struct.platform_device*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
